--- a/articulo.tex
+++ b/articulo.tex
@@ -66,14 +66,16 @@
 
 \begin{abstract}
 \noindent 
-ESPAÑOL
+Un Data WareHouse, almacen de datos, una coleccion de datos aorientada a un determinado contexto y ambito (empresas, instituciones, organizaciones, etc.). integro, no volatil y que puede cambiar en el tiempo. El principal objetivo es el de ayudar a las empresas, instituciones, organizaciones, etc. Que ayuda a tomar decisiones en la entidad quien la utilizara. Siempre a base del historial de las operaciones de la entidad que son almacenadas en una base de datos diseñada a favorecer el analisis, propagacion de los datos, con herramientas.
+Por lo general las empresas medianas y grandes los datos provienen de diferentes sistemas que posee la entidad y lo que busca el Data WareHouse es unificarlas y poder operar sobre ellas con la finalidad de buscar la buena toma de decisiones.
 
 \end{abstract}
 
 
 \begin{abstract}
 \noindent 
-INGLES
+A Data WareHouse, data warehouse, a collection of data oriented to a certain context and scope (companies, institutions, organizations, etc.). Integral, not volatile and that can change over time. The main objective is to help companies, institutions, organizations, etc. That helps to make decisions in the entity that will use it. Always based on the history of the operations of the entity that are stored in a database designed to favor the analysis, the propagation of the data, with tools.
+In general, medium and large companies, the data comes from different systems that the entity has and what Data WareHouse seeks is to unify and operate in them to seek a good decision making.
 \end{abstract}
 }
 
@@ -113,7 +115,7 @@ INGLES
 %----------------------------------------------------------------------------------------
 
 
-\section{Marco teorico}
+\section{Antecedentes}
 
 \begin{enumerate}
 
