--- a/articulo.tex
+++ b/articulo.tex
@@ -74,7 +74,7 @@ Por lo general las empresas medianas y grandes los datos provienen de diferentes
 
 \begin{abstract}
 \noindent 
-A Data WareHouse, data warehouse, a collection of data oriented to a certain context and scope (companies, institutions, organizations, etc.). Integral, not volatile and that can change over time. The main objective is to help companies, institutions, organizations, etc. That helps to make decisions in the entity that will use it. Always based on the history of the operations of the entity that are stored in a database designed to favor the analysis, the propagation of the data, with tools.
+A Data WareHouse,a collection of data oriented to a certain context and scope (companies, institutions, organizations, etc.). Integral, not volatile and that can change over time. The main objective is to help companies, institutions, organizations, etc. That helps to make decisions in the entity that will use it. Always based on the history of the operations of the entity that are stored in a database designed to favor the analysis, the propagation of the data, with tools.
 In general, medium and large companies, the data comes from different systems that the entity has and what Data WareHouse seeks is to unify and operate in them to seek a good decision making.
 \end{abstract}
 }
@@ -91,7 +91,8 @@ In general, medium and large companies, the data comes from different systems th
 %----------------------------------------------------------------------------------------
 
 \section{Introduccion}
-\lettrine[nindent=0em,lines=3]{I}ntroduccion
+\lettrine[nindent=0em,lines=3]{E}n la actualidad el mundo de los negocios plantea la necesidad de disponer de un acceso rápido y sencillo a información para la toma de decisiones. Dicha información debe estar estructurada y elaborada de acuerdo a parámetros de calidad, a fin de posibilitar una adaptación ágil y precisa a las fluctuaciones del ambiente externo.
+Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruciales para el funcionamiento de la empresa. Frecuentemente se basan en su experiencia este enfoque no es apto para las condiciones del mundo actual en el que los sistemas de gestión de calidad vigentes han demostrado la importancia de la toma de decisiones basada en cifras, datos y hechos. El Data Warehouse permite que los gerentes tomen decisiones siguiendo un enfoque racional, basados en información confiable y oportuna. Es tarea fundamental del Data Warehouse recolectar, unificar y depurar los datos del negocio, eliminando inconsistencias y conservando sólo la información útil para los objetivos empresariales.
 
 
 
