--- a/articulo.tex
+++ b/articulo.tex
@@ -96,8 +96,6 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 
 
 
-
-
 %----------------------------------------------------------------------------------------
 %	Objetivos
 %----------------------------------------------------------------------------------------
@@ -106,7 +104,9 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 \section{Objetivos}
 
 \begin{itemize}
-\item Objetivo 1
+\item Entender la importancia del Data WareHouse en las empresas, orgnizaciones, entidades, instituciones, etc.
+\item Desarrollar los antecedentes de las metodologias descritas por William H. Inmon y Ralph Kimball.
+\item Comparativo de las metodologias descritas por William H. Inmon y Ralph Kimball.
 
 \end{itemize}
 
@@ -120,8 +120,9 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 
 \begin{enumerate}
 
- \item Uno
+ \item William H. Inmon
 
+\item Ralph Kimball
 
 \end{enumerate}
 
