--- a/articulo.tex
+++ b/articulo.tex
@@ -58,7 +58,7 @@
 
 \pretitle{\begin{center}\Huge\bfseries} 
 \posttitle{\end{center}} 
-\title{Titulo articulo} 
+\title{Inmon vs Kimball} 
 \author{Andre Sebastian Reinoso Aranda\\
 }
 \date{\today} 
@@ -120,16 +120,43 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 
 \begin{enumerate}
 
- \item William H. Inmon
+ \item \textbf{William H. Inmon}
+\\
+William H. Inmon, científico informático estadounidense, reconocido por muchos como el padre del Data WareHouse Inmon escribió el primer libro, celebró la primera conferencia, escribió la primera columna en una revista y fue el primero en ofrecer clases del Data WareHouse. Inmon creó la definición aceptada de lo que es un Data WareHouse: una recopilación de datos variada de tiempo, no volátil, integrada y orientada al tema, en apoyo de las decisiones de la gerencia. En comparación con el enfoque del otro arquitecto pionero del almacenamiento de datos, Ralph Kimball, el enfoque de Inmon a menudo se caracteriza como un enfoque de arriba hacia abajo.
+\\ 
 
-\item Ralph Kimball
+\item \textbf{Ralph Kimball}
+\\
+Ralph Kimball  un autor sobre el tema del almacenamiento de datos y la inteligencia empresarial. Es uno de los arquitectos originales del almacenamiento de datos y es conocido por sus convicciones a largo plazo de que los almacenes de datos deben estar diseñados para ser comprensibles y rápidos. Su metodología, también conocida como modelado dimensional o la metodología Kimball, se ha convertido en el estándar de facto en el área de soporte de decisiones.
 
 \end{enumerate}
 
+%----------------------------------------------------------------------------------------
+%	DESAROLLO
+%----------------------------------------------------------------------------------------
+
+\section{DESARROLLO}
+\begin{enumerate}
+ \item \textbf{¿Que es un Data Warehouse?}
+
+ \item \textbf{¿Que es un Data Mart?} \\
+Estructura de datos, construido dentro de una base de datos este almacena información agregada o consolidada, que será consumida por alguna herramienta de visualización o data analytics. generalmente Datamart se especializa en un área de la empresa o de un flujo o proceso especifico. \\
+
+Un Datamart almacenara la información proveniente de uno o más orígenes de datos (bases de datos, archivos con datos, servicios de internet, etc.) y que ha sido procesada por un ETL (proceso de Extracción, Transformación y Carga).\\
+
+El Datamart contiene información consolidada, se actualiza periódicamente.
+
+\includegraphics[width=7cm, height=5cm]{Imagenes/datawarehouse_datamart}
+
+ \item \textbf{Enfoque Inmon}
+
+ \item \textbf{Enfoque Kimball}
+   
+\end{enumerate}
 
 
 %----------------------------------------------------------------------------------------
-%	Ejemplo
+%	GRAFICOS
 %----------------------------------------------------------------------------------------
 
 \section{Ejemplo}
@@ -140,7 +167,7 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 \end{enumerate}
 
 %----------------------------------------------------------------------------------------
-%	Análisis
+%	DIAGRAMAS
 %----------------------------------------------------------------------------------------
 
 \section{Análisis}
@@ -170,9 +197,10 @@ Los niveles gerenciales necesitan a menudo tomar decisiones de alto nivel, cruci
 \begin{thebibliography}{99} 
 
 \bibitem[1]{}
-\newblock Bren Dykes, 2018. Data Storytelling: The Essential Data Science Skill Everyone Needs, Reduperado de: www.forbes.com
+\newblock W. H. Inom, 2002. Building the Data Warehouse
 
-
+\bibitem[2]{}
+\newblock W. H. Inom, 2002. Building the Data Warehouse, Reduperado de: www.forbes.com
 
 
 \end{thebibliography}
