¿Que es un Data Warehouse?
¿Que es un Data Warehouse?

--- a/articulo.tex
+++ b/articulo.tex
@@ -137,7 +137,9 @@ Ralph Kimball  un autor sobre el tema del almacenamiento de datos y la inteligen
 
 \section{DESARROLLO}
 \begin{enumerate}
- \item \textbf{¿Que es un Data Warehouse?}
+ \item \textbf{¿Que es un Data Warehouse?}\\
+Area de almacenamiento donde todos los datos de la empresa se guardan en un solo lugar. Esto incluye datos de diferentes fuentes, así como datos actuales e históricos, tal vez de una plataforma heredada.\\ \\
+Puede consistir en datos de la propia empresa, que si la empresa es grande podría extenderse a muchos departamentos, todos los cuales pueden estar utilizando diferentes formatos y diferentes plataformas. Sin mencionar los datos de fuentes externas, ya sea de otras empresas o de contenido generado por el usuario.[2]
 
  \item \textbf{¿Que es un Data Mart?} \\
 Estructura de datos, construido dentro de una base de datos este almacena información agregada o consolidada, que será consumida por alguna herramienta de visualización o data analytics. generalmente Datamart se especializa en un área de la empresa o de un flujo o proceso especifico. \\
@@ -159,7 +161,7 @@ El Datamart contiene información consolidada, se actualiza periódicamente.
 %	GRAFICOS
 %----------------------------------------------------------------------------------------
 
-\section{Ejemplo}
+\section{graficos}
 \begin{enumerate}
 
  \item Uno
@@ -200,7 +202,7 @@ El Datamart contiene información consolidada, se actualiza periódicamente.
 \newblock W. H. Inom, 2002. Building the Data Warehouse
 
 \bibitem[2]{}
-\newblock W. H. Inom, 2002. Building the Data Warehouse, Reduperado de: www.forbes.com
+\newblock Spotless. Exploring Data Warehouse and Data Quality, Reduperado de: web.archive.org
 
 
 \end{thebibliography}
