--- a/articulo.tex
+++ b/articulo.tex
@@ -188,6 +188,88 @@ Este ciclo de vida del proyecto de DW, está basado en cuatro principios básico
 \includegraphics[width=7cm, height=5cm]{Imagenes/ciclodevidakimball}
 
 
+ \item \textbf{Definicion de Requerimientos}\\
+ 
+ La definición de los requerimientos es en gran medida un proceso
+de entrevistar al personal de negocio y técnico, pero siempre conviene 
+Cuadernos de la Facultad n. 5, 2010
+61
+tener un poco de preparación previa. Se debe aprender tanto como se
+pueda sobre el negocio, los competidores, la industria y los clientes del
+mismo. Hay que leer todos los informes posibles de la organización;
+rastrear los documentos de estrategia interna; entrevistar a los
+empleados, analizar lo que se dice en la prensa acerca de la
+organización, la competencia y la industria. Se deben conocer los
+términos y la terminología del negocio.
+Parte del proceso de preparación es averiguar a quién se debe
+realmente entrevistar. Esto normalmente implica examinar
+cuidadosamente el organigrama de la organización. Hay básicamente
+cuatro grupos de personas con las que hablar desde el principio: el
+directivo responsable de tomar las decisiones estratégicas; los
+administradores intermedios y de negocio responsables de explorar
+alternativas estratégicas y aplicar decisiones; personal de sistemas, si
+existen, la gente que realmente sabe qué tipos de problemas
+informáticos y de datos existen; y por último, la gente que se necesita
+entrevistar por razones políticas.
+A partir de las entrevistas, podemos identificar temas analíticos y
+procesos de negocio. Los temas analíticos agrupan requerimientos
+comunes en un tema común.
+
+
+\includegraphics[width=7cm, height=5cm]{Imagenes/img}
+
+
+\item \textbf{Matriz de Negocio(Bus Matrix)}\\
+ 
+ Por otra parte, a partir del análisis se puede construir una
+herramienta de la metodología denominada matriz de
+procesos/dimensiones (Bus Matrix en inglés).
+Una dimensión es una forma o vista o criterio por medio de cual se
+pueden sumariar, cruzar o cortar datos numéricos a analizar, datos que
+se denominan medidas (measures en inglés).
+Esta matriz tiene en sus filas los procesos de negocio
+identificados, y en las columnas, las dimensiones identificadas.
+Un ejemplo de esta matriz se puede observar en la tabla. Cada
+X en la intersección de las filas y columnas significa que en el proceso
+de negocio de la fila seleccionada se identifican las dimensiones
+propuestas.
+
+\includegraphics[width=7cm, height=5cm]{Imagenes/img2}
+
+
+\item \textbf{Linea de Desarrollo}\\
+
+hay que resaltar el rol central de la tarea de definición de requerimientos.
+Los requerimientos del negocio son el soporte inicial de las tareas
+subsiguientes. También tiene influencia en el plan de proyecto (nótese
+la doble fecha entre la caja de definición de requerimientos y la de
+planificación). En segundo lugar podemos ver tres rutas o caminos que
+se enfocan en tres diferentes áreas:
+
+\begin{itemize}
+	\item \textbf{Tecnología (Camino Superior)}. Implica tareas relacionadas con
+software específico, por ejemplo, Microsoft SQL Analysis Services.\\
+
+	\item \textbf{Datos (Camino del medio)}. En la misma diseñaremos e
+implementaremos el modelo dimensional, y desarrollaremos el
+subsistema de Extracción, Transformación y Carga (Extract,
+Transformation, and Load - ETL) para cargar el DW.\\
+
+ 	\item \textbf{Aplicaciones de Inteligencia de Negocios (Camino Inferior)} En
+esta ruta se encuentran tareas en las que diseñamos y
+desarrollamos las aplicaciones de negocios para los usuarios
+finales. 
+	
+\end{itemize}
+
+Estas rutas se combinan cuando se instala finalmente el sistema.
+En la parte de debajo de la figura se muestra la actividad general de
+administración del proyecto. A continuación describiremos cada una de
+las tareas.
+
+\includegraphics[width=7cm, height=5cm]{Imagenes/img3}
+
+
 
 
  \item \textbf{Linea de Datos}\\
