--- a/articulo.tex
+++ b/articulo.tex
@@ -39,7 +39,7 @@
 \pagestyle{fancy} 
 \fancyhead{} 
 \fancyfoot{} 
-\fancyhead[C]{Balanced ScoreCard y Business Model Canvas $\bullet$ Septiembre 2019 $\bullet$ } 
+\fancyhead[C]{Inmon vs Kimball $\bullet$ Octubre 2019 $\bullet$ } 
 \fancyfoot[RO,LE]{\thepage} 
 
 
@@ -316,8 +316,11 @@ Mientras que algunos miembros del proyecto están inmersos en la tecnología y l
 
 \section{graficos}
 \begin{enumerate}
+En esta tarea se proporciona, a una gran comunidad de usuarios una forma mas estructurada y por lo tanto, mas facil, de acceder al almacen de datos. Se proporciona este acceso estructurado a traves de lo que llamamos, aplicaciones de inteligencia de negocios (BusinessIntelligence Aplications). Las aplicaciones de BI son la cara visible de la inteligencia de negocios: los informes y aplicaciones de analisis proporcionan informacion util a los usuarios. Las aplicaciones de BI incluyen un amplio espectro de tipos de informes y herramientas de analisis,que van desde informes simples de formato fijo, a sofisticadas aplicaciones analıticas que usan complejos algoritmos e informacion del dominio. Kimball divide a estas aplicaciones en dos categorıas basadas en el nivel de sofisticacion, y les llama: \\a) Informes estandar: son informes relativamente simples, de formato predefinido, y parametros de consulta fijos, proporcionan a los usuarios un conjunto basico de informacion acerca de lo que esta sucediendo en un area determinada de la empresa y se utilizan dıa a dıa. \\b) Aplicaciones analıticas: Son mas complejasque los informes estandar. Estas aplicaciones pueden incluir algoritmos y modelos de minerıade  datos,  que  ayudan  a  identificar  oportunidades  o  cuestiones  subyacentes  en  los  datos,  yel usuario puede pedir cambios en los sistemas transaccionales basandose en los conocimientos obtenidos del uso de la aplicacion de BI. . \\\\
+ 
+\includegraphics[width=7cm, height=5cm]{Imagenes/power-bi-line}
+\\ 
 
- \item Uno
    
 \end{enumerate}
 
@@ -329,20 +332,23 @@ Mientras que algunos miembros del proyecto están inmersos en la tecnología y l
 
 \begin{enumerate}
 
-    \item Uno
+    Los análisis son el estudio de datos para encontrar información significativa y detallada. Es una aplicación muy popular entre las herramientas de inteligencia de negocios, ya que permite a las empresas comprender sus datos en profundidad y generar valor en sus decisiones basadas en datos. Por ejemplo, una empresa de marketing podría usar este análisis para determinar los segmentos de clientes que tienen más probabilidad de convertirse en nuevos clientes.
+    \\ \\
+\includegraphics[width=7cm, height=5cm]{Imagenes/linea_bi1}
+    
 \end{enumerate}
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSIONES
 %----------------------------------------------------------------------------------------
-
+\newpage
 \section{Conclusiones}
 \begin{itemize}	
- \item Uno
+ Se ha demostrado que tanto el enfoque de Inmon como el de Kimball funcionan para entregar con éxito almacenes de datos. Incluso hay organizaciones donde se ha implementado una combinación de ambos ('modelo híbrido'). En un modelo híbrido, el almacén de datos se construye utilizando el modelo Inmon, y además del almacén de datos integrado, los almacenes de datos orientados a procesos de negocio se construyen utilizando el esquema en estrella para la presentación de informes. No podemos generalizar y decir que un enfoque es mejor que el otro; Ambos tienen sus ventajas y desventajas, y ambos funcionan bien en diferentes escenarios. El arquitecto tiene que seleccionar un enfoque para el almacén de datos en función de los diferentes factores; Se identificaron algunas claves en este documento. Finalmente, para que cualquier enfoque sea exitoso, debe ser cuidadosamente pensado, discutido en detalle. \\\\\\\\\\\\\\\
 
 \end{itemize} 
 
-
+\newpage
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAFIA
