--- a/articulo.tex
+++ b/articulo.tex
@@ -336,8 +336,49 @@ En esta tarea se proporciona, a una gran comunidad de usuarios una forma mas est
     Los análisis son el estudio de datos para encontrar información significativa y detallada. Es una aplicación muy popular entre las herramientas de inteligencia de negocios, ya que permite a las empresas comprender sus datos en profundidad y generar valor en sus decisiones basadas en datos. Por ejemplo, una empresa de marketing podría usar este análisis para determinar los segmentos de clientes que tienen más probabilidad de convertirse en nuevos clientes.
     \\ \\
 \includegraphics[width=7cm, height=5cm]{Imagenes/linea_bi1}
-    
 
+  \begin{enumerate}  
+\item \textbf{Despliegue}
+    \begin{itemize}
+	    \item \textbf{Despliegue} \\
+	    - debe ser sincronizado. \\
+	    - Se debera aplazar si todas las piezas no estan listas para produccion
+	\begin{itemize}
+	    \item Entrenamiento \\
+	    \item Documentacion \\
+	    \item Validacion de datos \\
+    \end{itemize}
+    \\
+    \includegraphics[width=7cm, height=5cm]{Imagenes/despliegue}
+    \\\\\\\\
+	\item \textbf{Mantenimiento}\\
+	- cuando el sistema este en produccion.\\
+	- tareas operacionales:
+	\begin{itemize}
+	    \item Monitoreo \\
+	    \item Tunning del desempeño \\
+	    \item Mantenimiento de indices \\
+	    \item Backups \\
+	    
+	\end{itemize}
+	- Apoyo permanente , capacitacion y comunicacion con los usuarios finales. \\
+	\includegraphics[width=7cm, height=5cm]{Imagenes/mantenimiento}
+	\\
+	\item \textbf{Crecimiento}\\
+	- Los DW tienden a expandirse.\\
+	- Es considerado un signo de exito.\\
+	- Nuevos requerimientos deben ser prioridad.\\
+	- empezar el ciclo de nuevo : \\
+	\begin{itemize}
+	    \item Construir sobre las bases ya establecidas.  \\
+	    \item Enfoque en los nuevos Requerimientos. \\
+	    
+	\end{itemize}
+\end{itemize}
+
+\end{enumerate}
+
+\includegraphics[width=7cm, height=5cm]{Imagenes/crecimiento}
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSIONES
